# openairealtime_api

./: hello.py  pyproject.toml  realtime_aud_ws.py  realtime_aud_ws_1.py  realtime_txt_ws.py  test_pushtalk.py
OpenAI-RealtimeAPIDemoPythonPC/: realtime.py
